feat: add character deletion flow
